tests/invalid/empty_list_literal/main.py
def run_case() -> None:
    print([])

if __name__ == "__main__":
    run_case()
